Task done. Refactored Added docs

--- a/src/main/resources/templates/shop/create_item.html
+++ b/src/main/resources/templates/shop/create_item.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
->
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -76,7 +75,7 @@
                 <span class="bar"></span>
                 <label>Image</label>
             </div>
-            <img id="item-image" height="150" style="display: none;">
+            <img id="item-image" height="150" style="display: none;" alt="img">
 
             <input id="create-item-button" type="submit" value="Create" class="btn btn-primary">
             <div id="div-server-error">
