--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -2,10 +2,12 @@
     margin-top: 5%;
     display: none;
     min-width: 20%;
+    margin: auto;
 }
 
 .container{
-    text-align:center
+    text-align:center;
+    display: grid;
 }
 
 #total-price{
